--- a/index.html
+++ b/index.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>exmxc Audit API</title>
-  <meta name="description" content="Entity Engineering™ Audit API by exmxc.ai — automated schema intelligence for AI-search visibility.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>exmxc.ai Audit Test</title>
   <style>
     body {
-      font-family: "Inter", system-ui, sans-serif;
-      background: #0e0e0e;
-      color: #f5f5f5;
+      font-family: system-ui, sans-serif;
+      max-width: 600px;
+      margin: 60px auto;
       text-align: center;
-      padding: 6rem 2rem;
-      line-height: 1.6;
     }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      color: #6cf4b2;
-      letter-spacing: 0.02em;
-    }
-    p {
+    input {
+      width: 80%;
+      padding: 10px;
       font-size: 1rem;
-      opacity: 0.9;
-      margin-top: 0.75rem;
     }
-    code {
-      background: #1c1c1c;
-      padding: 0.3rem 0.6rem;
-      border-radius: 6px;
-      color: #f8d575;
-      font-size: 0.95rem;
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      margin-top: 10px;
+      cursor: pointer;
     }
-    footer {
-      margin-top: 4rem;
-      font-size: 0.8rem;
-      color: #777;
-      opacity: 0.7;
-    }
-    a {
-      color: #6cf4b2;
-      text-decoration: none;
+    pre {
+      text-align: left;
+      background: #f6f8fa;
+      padding: 15px;
+      border-radius: 8px;
+      overflow-x: auto;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>✅ exmxc Audit API is Live</h1>
-  <p>Automated Entity Engineering™ for AI-search visibility.</p>
-  <p>Test it directly: <br>
-    <code>/api/audit?url=https://www.trailgenic.com</code>
-  </p>
-  <p>Built by <a href="https://www.exmxc.ai" target="_blank">exmxc.ai</a> · Powered by Ella</p>
-  <footer>
-    © 2025 exmxc.ai · All Rights Reserved
-  </footer>
+  <h1>🔍 exmxc.ai Audit App</h1>
+  <p>Enter a URL to audit:</p>
+  <input id="url" placeholder="https://www.trailgenic.com" />
+  <br />
+  <button onclick="runAudit()">Run Audit</button>
+
+  <pre id="result"></pre>
+
+  <script>
+    async function runAudit() {
+      const url = document.getElementById("url").value.trim();
+      if (!url) return alert("Please enter a URL");
+
+      document.getElementById("result").textContent = "⏳ Running audit...";
+
+      try {
+        const res = await fetch("/api/audit", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ url })
+        });
+        const data = await res.json();
+        document.getElementById("result").textContent = JSON.stringify(data, null, 2);
+      } catch (err) {
+        document.getElementById("result").textContent = "❌ Error: " + err.message;
+      }
+    }
+  </script>
 </body>
 </html>
