--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>exmxc Audit</title>
-</head>
-<body style="font-family:sans-serif;text-align:center;margin-top:60px;">
-  <h1>exmxc.ai Audit</h1>
-  <p>Enter a URL to audit:</p>
-  <input id="url" style="width:60%;padding:10px;" placeholder="https://www.trailgenic.com">
-  <button onclick="runAudit()" style="padding:10px 20px;margin-left:10px;">Run Audit</button>
-  <pre id="result" style="text-align:left;background:#f9f9f9;padding:15px;margin-top:20px;"></pre>
-  <script>
-    async function runAudit() {
-      const url = document.getElementById("url").value.trim();
-      if (!url) return alert("Enter a URL first.");
-      document.getElementById("result").textContent = "⏳ Running audit...";
-      const res = await fetch("/api/audit", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ url })
-      });
-      const data = await res.json();
-      document.getElementById("result").textContent = JSON.stringify(data, null, 2);
-    }
-  </script>
-</body>
-</html>
+{
+  "version": 2,
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "index.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
+}
