--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>exmxc Audit</title>
-</head>
-<body style="font-family:sans-serif;text-align:center;margin-top:60px;">
-  <h1>exmxc.ai Audit</h1>
-  <p>Enter a URL to audit:</p>
-  <input id="url" style="width:60%;padding:10px;" placeholder="https://www.trailgenic.com">
-  <button onclick="runAudit()" style="padding:10px 20px;margin-left:10px;">Run Audit</button>
-  <pre id="result" style="text-align:left;background:#f9f9f9;padding:15px;margin-top:20px;"></pre>
-  <script>
-    async function runAudit() {
-      const url = document.getElementById("url").value.trim();
-      if (!url) return alert("Enter a URL first.");
-      document.getElementById("result").textContent = "⏳ Running audit...";
-      const res = await fetch("/api/audit", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ url })
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>exmxc.ai Audit</title>
+    <style>
+      body {
+        font-family: system-ui, -apple-system, sans-serif;
+        text-align: center;
+        margin: 60px auto;
+        max-width: 900px;
+        padding: 0 20px;
+        background: #fafafa;
+      }
+      h1 {
+        color: #111;
+        font-weight: 700;
+        letter-spacing: -0.5px;
+      }
+      input {
+        width: 75%;
+        padding: 10px;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+      }
+      button {
+        padding: 10px 20px;
+        font-size: 1rem;
+        border: none;
+        border-radius: 6px;
+        background: #111;
+        color: #fff;
+        cursor: pointer;
+      }
+      button:hover {
+        background: #333;
+      }
+      pre {
+        text-align: left;
+        background: #f5f5f5;
+        border-radius: 8px;
+        padding: 20px;
+        margin-top: 30px;
+        font-size: 0.95rem;
+        overflow-x: auto;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
+    </style>
+  </head>
+
+  <body>
+    <h1>exmxc.ai Audit</h1>
+    <p>Enter a URL to audit:</p>
+
+    <input id="urlInput" type="text" placeholder="example.com" />
+    <button id="runBtn">Run Audit</button>
+
+    <pre id="result"></pre>
+
+    <script>
+      const input = document.getElementById("urlInput");
+      const button = document.getElementById("runBtn");
+      const out = document.getElementById("result");
+
+      // Auto-fix for URLs without https://
+      function normalizeInput(raw) {
+        if (!raw) return null;
+        let u = raw.trim();
+        if (!/^https?:\/\//i.test(u)) u = "https://" + u;
+        try {
+          new URL(u);
+          return u;
+        } catch {
+          return null;
+        }
+      }
+
+      async function runAudit() {
+        out.textContent = "";
+        const normalized = normalizeInput(input.value);
+        if (!normalized) {
+          out.textContent = JSON.stringify({ error: "Missing or invalid URL" }, null, 2);
+          return;
+        }
+
+        // Reflect normalized value in input
+        input.value = normalized;
+
+        out.textContent = "⏳ Running audit...";
+        try {
+          const res = await fetch(`/api/audit?url=${encodeURIComponent(normalized)}`);
+          const data = await res.json();
+          out.textContent = JSON.stringify(data, null, 2);
+        } catch (err) {
+          out.textContent = JSON.stringify({ error: "Network or server error", details: String(err) }, null, 2);
+        }
+      }
+
+      // Events
+      button.addEventListener("click", runAudit);
+      input.addEventListener("keydown", (e) => e.key === "Enter" && runAudit());
+      input.addEventListener("blur", () => {
+        const n = normalizeInput(input.value);
+        if (n) input.value = n;
       });
-      const data = await res.json();
-      document.getElementById("result").textContent = JSON.stringify(data, null, 2);
-    }
-  </script>
-</body>
+    </script>
+  </body>
 </html>
