--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>exmxc Audit</title>
-</head>
-<body style="font-family:sans-serif;text-align:center;margin-top:60px;">
-  <h1>exmxc.ai Audit</h1>
-  <p>Enter a URL to audit:</p>
-  <input id="url" style="width:60%;padding:10px;" placeholder="https://www.trailgenic.com">
-  <button onclick="runAudit()" style="padding:10px 20px;margin-left:10px;">Run Audit</button>
-  <pre id="result" style="text-align:left;background:#f9f9f9;padding:15px;margin-top:20px;"></pre>
-  <script>
-    async function runAudit() {
-      const url = document.getElementById("url").value.trim();
-      if (!url) return alert("Enter a URL first.");
-      document.getElementById("result").textContent = "⏳ Running audit...";
-      const res = await fetch("/api/audit", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ url })
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>exmxc.ai Audit</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        max-width: 900px;
+        margin: 40px auto;
+        text-align: center;
+      }
+      input {
+        width: 70%;
+        padding: 10px;
+        font-size: 1rem;
+      }
+      button {
+        padding: 10px 16px;
+        font-size: 1rem;
+        margin-left: 8px;
+        cursor: pointer;
+      }
+      pre {
+        background: #f8f8f8;
+        padding: 20px;
+        text-align: left;
+        overflow-x: auto;
+        border-radius: 6px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <h1>exmxc.ai Audit</h1>
+    <p>Enter a URL to audit:</p>
+    <input id="urlInput" type="text" placeholder="https://example.com" />
+    <button id="runButton">Run Audit</button>
+    <pre id="result"></pre>
+
+    <script>
+      document.getElementById("runButton").addEventListener("click", async () => {
+        const input = document.getElementById("urlInput").value.trim();
+        const resultEl = document.getElementById("result");
+        resultEl.textContent = "Loading...";
+
+        try {
+          const url = input.startsWith("http") ? input : `https://${input}`;
+          const res = await fetch(`/api/audit?url=${encodeURIComponent(url)}`);
+          const data = await res.json();
+          resultEl.textContent = JSON.stringify(data, null, 2);
+        } catch (err) {
+          resultEl.textContent = JSON.stringify({ error: err.message }, null, 2);
+        }
       });
-      const data = await res.json();
-      document.getElementById("result").textContent = JSON.stringify(data, null, 2);
-    }
-  </script>
-</body>
+    </script>
+  </body>
 </html>
