--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,44 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        background-color: #fafafa;
         max-width: 900px;
         margin: 40px auto;
         text-align: center;
+        color: #111;
       }
+
       input {
         width: 70%;
         padding: 10px;
         font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 6px;
       }
+
       button {
         padding: 10px 16px;
         font-size: 1rem;
         margin-left: 8px;
+        background: #111;
+        color: white;
+        border: none;
+        border-radius: 6px;
         cursor: pointer;
       }
+
+      button:hover {
+        background: #333;
+      }
+
       pre {
-        background: #f8f8f8;
+        background: #f4f4f4;
         padding: 20px;
         text-align: left;
         overflow-x: auto;
-        border-radius: 6px;
+        border-radius: 8px;
+        margin-top: 25px;
+        font-size: 0.9rem;
       }
     </style>
   </head>
@@ -43,6 +60,7 @@
       document.getElementById("runButton").addEventListener("click", async () => {
         const input = document.getElementById("urlInput").value.trim();
         const resultEl = document.getElementById("result");
+
         resultEl.textContent = "Loading...";
 
         try {
