--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>exmxc.ai Audit</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #fafafa;
+        max-width: 900px;
+        margin: 40px auto;
+        text-align: center;
+        color: #111;
+      }
+
+      input {
+        width: 70%;
+        padding: 10px;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+      }
+
+      button {
+        padding: 10px 16px;
+        font-size: 1rem;
+        margin-left: 8px;
+        background: #111;
+        color: white;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background: #333;
+      }
+
+      pre {
+        background: #f4f4f4;
+        padding: 20px;
+        text-align: left;
+        overflow-x: auto;
+        border-radius: 8px;
+        margin-top: 25px;
+        font-size: 0.9rem;
+      }
+    </style>
   </head>
-  <body style="font-family:Arial, sans-serif; text-align:center; margin:40px;">
+
+  <body>
     <h1>exmxc.ai Audit</h1>
     <p>Enter a URL to audit:</p>
-    <input id="urlInput" type="text" placeholder="https://example.com" style="width:60%; padding:10px;" />
-    <button id="runButton" style="padding:10px 16px;">Run Audit</button>
-    <pre id="result" style="background:#f4f4f4; text-align:left; padding:15px; margin-top:20px;"></pre>
+    <input id="urlInput" type="text" placeholder="https://example.com" />
+    <button id="runButton">Run Audit</button>
+    <pre id="result"></pre>
 
     <script>
       document.getElementById("runButton").addEventListener("click", async () => {
         const input = document.getElementById("urlInput").value.trim();
         const resultEl = document.getElementById("result");
         resultEl.textContent = "Loading...";
+
         try {
-          const res = await fetch(`/api/audit?url=${encodeURIComponent(input)}`);
+          const url = input.startsWith("http") ? input : `https://${input}`;
+          const res = await fetch(`/api/audit?url=${encodeURIComponent(url)}`);
           const data = await res.json();
           resultEl.textContent = JSON.stringify(data, null, 2);
         } catch (err) {
