--- a/index.html
+++ b/index.html
@@ -6,13 +6,58 @@
     <title>exmxc.ai Audit</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: Inter, Arial, sans-serif;
         background-color: #fafafa;
-        max-width: 900px;
-        margin: 40px auto;
+        color: #111;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 100vh;
+      }
+
+      header {
+        width: 100%;
+        background: #000;
+        color: #fff;
+        padding: 1rem 0;
         text-align: center;
+        font-weight: 600;
+        font-size: 1.5rem;
+        letter-spacing: 0.5px;
+      }
+
+      #scoreBanner {
+        width: 100%;
+        text-align: center;
+        padding: 0.75rem;
+        font-weight: 600;
         color: #111;
       }
+
+      .score-good {
+        background: #d4edda;
+        color: #155724;
+      }
+
+      .score-medium {
+        background: #fff3cd;
+        color: #856404;
+      }
+
+      .score-poor {
+        background: #f8d7da;
+        color: #721c24;
+      }
+
+      main {
+        max-width: 900px;
+        margin: 2rem auto;
+        padding: 0 1rem;
+        text-align: center;
+      }
+
       input {
         width: 70%;
         padding: 10px;
@@ -20,6 +65,7 @@
         border: 1px solid #ccc;
         border-radius: 6px;
       }
+
       button {
         padding: 10px 16px;
         font-size: 1rem;
@@ -30,9 +76,11 @@
         border-radius: 6px;
         cursor: pointer;
       }
+
       button:hover {
         background: #333;
       }
+
       pre {
         background: #f4f4f4;
         padding: 20px;
@@ -41,28 +89,61 @@
         border-radius: 8px;
         margin-top: 25px;
         font-size: 0.9rem;
+        white-space: pre-wrap;
       }
     </style>
   </head>
   <body>
-    <h1>exmxc.ai Audit</h1>
-    <p>Enter a URL to audit:</p>
-    <input id="urlInput" type="text" placeholder="https://example.com" />
-    <button id="runButton">Run Audit</button>
-    <pre id="result"></pre>
+    <header>exmxc.ai Audit</header>
+    <div id="scoreBanner" class="score-medium">EEI: -- / 100 — Awaiting Input</div>
+
+    <main>
+      <input id="urlInput" type="text" placeholder="https://example.com" />
+      <button id="runButton">Submit</button>
+      <pre id="result"></pre>
+    </main>
 
     <script>
-      document.getElementById("runButton").addEventListener("click", async () => {
+      const runButton = document.getElementById("runButton");
+      const resultEl = document.getElementById("result");
+      const scoreBanner = document.getElementById("scoreBanner");
+
+      function setBanner(score) {
+        let cls = "score-poor";
+        let label = "Invisible Entity";
+        if (score >= 70) {
+          cls = "score-good";
+          label = "Visible Entity";
+        } else if (score >= 40) {
+          cls = "score-medium";
+          label = "Partial Entity";
+        }
+        scoreBanner.className = cls;
+        scoreBanner.textContent = `EEI: ${score} / 100 — ${label}`;
+      }
+
+      runButton.addEventListener("click", async () => {
         const input = document.getElementById("urlInput").value.trim();
-        const resultEl = document.getElementById("result");
+        if (!input) return;
         resultEl.textContent = "Loading...";
+        scoreBanner.textContent = "Running audit...";
 
         try {
           const url = input.startsWith("http") ? input : `https://${input}`;
           const res = await fetch(`/api/audit?url=${encodeURIComponent(url)}`);
           const data = await res.json();
+
+          if (data.entityScore !== undefined) {
+            setBanner(data.entityScore);
+          } else {
+            scoreBanner.textContent = "EEI unavailable — check response below.";
+            scoreBanner.className = "score-poor";
+          }
+
           resultEl.textContent = JSON.stringify(data, null, 2);
         } catch (err) {
+          scoreBanner.textContent = "Error — could not complete audit.";
+          scoreBanner.className = "score-poor";
           resultEl.textContent = JSON.stringify({ error: err.message }, null, 2);
         }
       });
