--- a/index.html
+++ b/index.html
@@ -1,356 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>exmxc.ai Audit — Entity Engineering™</title>
-  <meta name="description" content="Real-time Entity Engineering™ audit and EEI scoring by exmxc.ai" />
-  <style>
-    :root{
-      --bg:#fafafa;
-      --text:#111;
-      --muted:#666;
-      --card:#ffffff;
-      --border:#e9e9e9;
-      --accent:#111;
-      --shadow:0 6px 18px rgba(0,0,0,.06);
-      --radius:14px;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      background:var(--bg);
-      color:var(--text);
-      font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;
-    }
-    .wrap{
-      max-width:1000px;
-      margin:32px auto 48px;
-      padding:0 16px;
-    }
-    header{
-      text-align:center;
-      margin-bottom:18px;
-    }
-    h1{
-      font-size:28px;
-      margin:0 0 8px;
-      letter-spacing:.2px;
-    }
-    .sub{color:var(--muted);font-size:14px}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>exmxc.ai Audit</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    /* EEI banner */
-    .eei-wrap{
-      background:#fff8e6;
-      border:1px solid #f1e7cc;
-      border-radius:var(--radius);
-      padding:16px 18px;
-      margin:18px 0 22px;
-      box-shadow:var(--shadow);
-    }
-    .eei-row{
-      display:flex;gap:14px;align-items:center;justify-content:space-between;flex-wrap:wrap
-    }
-    .eei-badge{
-      font-weight:700;
-      font-size:18px;
-    }
-    .tier{
-      font-weight:600;
-      padding:6px 10px;
-      border-radius:10px;
-      background:#fff;
-      border:1px solid var(--border);
-      color:#222;
-      white-space:nowrap;
-    }
-    .bar{
-      position:relative;
-      height:12px;
-      border-radius:999px;
-      background:#f1f1f1;
-      overflow:hidden;
-      flex:1;
-      min-width:260px;
-    }
-    .bar>span{
-      position:absolute;inset:0 100% 0 0;
-      background:linear-gradient(90deg,#b91c1c,#f59e0b,#facc15,#22c55e,#3b82f6);
-      transition:inset .35s ease;
-    }
+  <body>
+    <h1>exmxc.ai Audit</h1>
+    <p class="subtitle">Entity Engineering™ Index (EEI) — real-time audit</p>
 
-    /* form */
-    .card{
-      background:var(--card);
-      border:1px solid var(--border);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      padding:18px;
-      margin-bottom:16px;
-    }
-    .form{
-      display:flex;gap:10px;flex-wrap:wrap;align-items:center
-    }
-    input[type="text"]{
-      flex:1;
-      min-width:280px;
-      padding:12px 14px;
-      border:1px solid var(--border);
-      border-radius:10px;
-      font-size:15px;
-      outline:none;
-      transition:border .2s ease, box-shadow .2s ease;
-      background:#fff;
-    }
-    input[type="text"]:focus{border-color:#111;box-shadow:0 0 0 3px rgba(0,0,0,.06)}
-    button{
-      appearance:none;border:0;cursor:pointer;
-      padding:12px 16px;border-radius:10px;font-weight:600;
-      background:#111;color:#fff;transition:transform .05s ease,opacity .2s ease
-    }
-    button:hover{opacity:.95}
-    button:active{transform:translateY(1px)}
-
-    /* grid */
-    .grid{
-      display:grid;
-      grid-template-columns:1fr;
-      gap:16px;
-    }
-    @media (min-width:960px){
-      .grid{grid-template-columns:420px 1fr}
-    }
-
-    /* metric table */
-    .metrics{
-      width:100%;border-collapse:separate;border-spacing:0 10px
-    }
-    .metrics th{
-      text-align:left;color:var(--muted);font-size:12px;font-weight:700;
-      text-transform:uppercase;letter-spacing:.08em;padding:0 8px 6px
-    }
-    .metric{
-      background:#fff;border:1px solid var(--border);border-radius:12px;padding:10px 12px;
-      display:grid;grid-template-columns:1.1fr 70px 1fr;gap:10px;align-items:center
-    }
-    .metric .name{font-weight:600}
-    .metric .pts{text-align:right;font-variant-numeric:tabular-nums}
-    .pbar{
-      height:8px;background:#f2f2f2;border-radius:999px;overflow:hidden
-    }
-    .pbar>span{display:block;height:100%;width:0;background:#111;transition:width .35s ease}
-
-    /* json panel */
-    pre{
-      margin:0;background:#0b1220;color:#d7e1ff;border-radius:12px;
-      padding:16px;overflow:auto;line-height:1.4;border:1px solid #0f1a33
-    }
-    .json-actions{display:flex;gap:8px;margin-bottom:8px;flex-wrap:wrap}
-    .btn-lite{background:#f4f4f4;color:#111;border:1px solid var(--border)}
-    .muted{color:var(--muted)}
-
-    footer{
-      margin:28px auto 40px;
-      max-width:1000px;padding:0 16px;color:#444
-    }
-    .foot{
-      background:#0e0e0e;color:#e9e9e9;
-      padding:16px 18px;border-radius:12px;
-      display:flex;justify-content:center;gap:6px;flex-wrap:wrap;
-      font-size:13px
-    }
-    .foot a{color:#a6e3ff;text-decoration:none}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <header>
-      <h1>exmxc.ai Audit</h1>
-      <div class="sub">Entity Engineering™ Index (EEI) — real-time audit</div>
-    </header>
-
-    <!-- EEI Banner -->
-    <div class="eei-wrap">
-      <div class="eei-row">
-        <div class="eei-badge" id="eeiLabel">EEI: — / 100</div>
-        <div class="bar" aria-label="EEI Score">
-          <span id="eeiFill"></span>
-        </div>
-        <div class="tier" id="tierPill">—</div>
-      </div>
+    <div class="score-container">
+      <span id="score-label">EEI: -- / 100</span>
+      <div id="score-bar"></div>
+      <span id="tier-label"></span>
     </div>
 
-    <!-- Input -->
-    <div class="card">
-      <div class="form">
-        <input id="urlInput" type="text" placeholder="https://example.com or example.com" />
-        <button id="runBtn">Submit</button>
-      </div>
-      <div class="muted" style="margin-top:8px">Tip: paste any public URL. We’ll normalize and fetch.</div>
-    </div>
+    <form id="audit-form">
+      <input
+        type="text"
+        id="url-input"
+        placeholder="Enter a URL to audit"
+        required
+      />
+      <button type="submit">Submit</button>
+    </form>
 
-    <!-- Results -->
-    <div class="grid">
-      <!-- Left: Metric Breakdown -->
-      <div class="card">
-        <div style="font-weight:700;margin-bottom:6px">Signal Breakdown</div>
-        <table class="metrics" id="metricTable">
-          <thead>
-            <tr>
-              <th>Category</th>
-              <th>Points</th>
-              <th>Strength</th>
-            </tr>
-          </thead>
-          <tbody id="metricBody">
-            <!-- rows injected here -->
-          </tbody>
-        </table>
-      </div>
+    <section id="signal-section">
+      <h2>Signal Breakdown</h2>
+      <div id="signals"></div>
+    </section>
 
-      <!-- Right: JSON -->
-      <div class="card">
-        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px">
-          <div style="font-weight:700">Raw Response</div>
-          <div class="json-actions">
-            <button class="btn-lite" id="copyBtn">Copy JSON</button>
-            <button class="btn-lite" id="dlBtn">Download JSON</button>
-          </div>
-        </div>
-        <pre id="jsonOut">{\n  "status": "waiting"\n}</pre>
-      </div>
-    </div>
+    <section id="json-section">
+      <h2>Raw Response</h2>
+      <pre id="json-output"></pre>
+    </section>
 
     <footer>
-      <div class="foot">
-        <span>Powered by</span><strong>exmxc.ai</strong><span> | Entity Engineering™ Audit</span>
-      </div>
+      Powered by <strong>exmxc.ai</strong> | Entity Engineering™ Audit
     </footer>
-  </div>
 
-  <script>
-    // Max points per metric (matches backend audit.js)
-    const METRIC_MAX = {
-      schema: 25,
-      alignment: 20,
-      links: 15,
-      canonical: 10,
-      namePrecision: 10,
-      diversity: 10,
-      crossRefs: 5,
-      freshness: 5
-    };
-
-    const METRIC_LABEL = {
-      schema: "Schema",
-      alignment: "Title–Description Alignment",
-      links: "Internal Link Density",
-      canonical: "Canonical URL",
-      namePrecision: "Name Precision",
-      diversity: "Schema Diversity",
-      crossRefs: "Cross-References",
-      freshness: "Freshness"
-    };
-
-    const TIER = (score) => {
-      if (score >= 90) return ["Platinum Entity","💎 Fully recognized & trusted"];
-      if (score >= 70) return ["Gold Entity","🥇 Visible; needs depth"];
-      if (score >= 50) return ["Silver Entity","🥈 Context is thin"];
-      if (score >= 30) return ["Bronze Entity","🥉 Weak signals"];
-      return ["Obscure Entity","🕳️ Largely invisible"];
-    };
-
-    function setEEI(score){
-      const label = document.getElementById("eeiLabel");
-      const fill = document.getElementById("eeiFill");
-      const pill = document.getElementById("tierPill");
-      const [tier, blurb] = TIER(score);
-
-      label.textContent = `EEI: ${score} / 100`;
-      pill.textContent = `${tier}`;
-      // Width is score%; the gradient already shows the tier colors
-      fill.style.insetInlineEnd = (100 - Math.max(0, Math.min(100, score))) + "%";
-      fill.title = blurb;
-    }
-
-    function renderMetrics(metrics){
-      const body = document.getElementById("metricBody");
-      body.innerHTML = "";
-
-      const order = ["schema","alignment","links","canonical","namePrecision","diversity","crossRefs","freshness"];
-      order.forEach(key=>{
-        if(!metrics[key]) return;
-        const pts = metrics[key].points ?? 0;
-        const max = METRIC_MAX[key] ?? 10;
-        const pct = Math.max(0, Math.min(100, Math.round((pts / max) * 100)));
-
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>
-            <div class="metric">
-              <div class="name">${METRIC_LABEL[key] || key}</div>
-              <div class="pts">${pts} / ${max}</div>
-              <div class="pbar" aria-label="${METRIC_LABEL[key]} strength">
-                <span style="width:${pct}%"></span>
-              </div>
-            </div>
-          </td>
-        `;
-        // The row contains the whole metric block (single-column table style)
-        body.appendChild(tr);
-      });
-    }
-
-    function showJSON(obj){
-      const pre = document.getElementById("jsonOut");
-      pre.textContent = JSON.stringify(obj, null, 2);
-    }
-
-    async function runAudit(){
-      const input = document.getElementById("urlInput").value.trim();
-      const url = input.startsWith("http") ? input : `https://${input}`;
-      showJSON({ status: "loading", url });
-
-      try{
-        const res = await fetch(`/api/audit?url=${encodeURIComponent(url)}`);
-        const data = await res.json();
-        showJSON(data);
-
-        const score = typeof data.entityScore === "number" ? Math.round(data.entityScore) : 0;
-        setEEI(score);
-        if (data.metrics) renderMetrics(data.metrics);
-      }catch(err){
-        showJSON({ error: err?.message || String(err) });
-        setEEI(0);
-        renderMetrics({});
-      }
-    }
-
-    // Buttons
-    document.getElementById("runBtn").addEventListener("click", runAudit);
-    document.getElementById("urlInput").addEventListener("keydown", (e)=>{
-      if(e.key === "Enter") runAudit();
-    });
-
-    document.getElementById("copyBtn").addEventListener("click", async ()=>{
-      const txt = document.getElementById("jsonOut").textContent;
-      try{ await navigator.clipboard.writeText(txt); }catch{}
-    });
-
-    document.getElementById("dlBtn").addEventListener("click", ()=>{
-      const txt = document.getElementById("jsonOut").textContent;
-      const blob = new Blob([txt], {type:"application/json"});
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = "exmxc-audit.json";
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
-      URL.revokeObjectURL(a.href);
-    });
-
-    // Warm state
-    setEEI(0);
-  </script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
