--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
     <div
       class="bg-amber-50 border border-amber-200 rounded-xl p-5 mb-6 text-center shadow-sm"
     >
-      <div
-        id="scoreDisplay"
-        class="text-xl font-semibold text-gray-900 mb-2"
-      >
+      <div id="scoreDisplay" class="text-xl font-semibold text-gray-900 mb-2">
         EEI: -- / 100
       </div>
       <div class="relative w-full h-3 bg-gray-200 rounded-full overflow-hidden">
@@ -124,24 +121,29 @@
           const score = data.entityScore || 0;
           scoreDisplay.textContent = `EEI: ${score} / 100`;
           scoreBar.style.width = `${score}%`;
-
-          // Tier label
           entityTier.textContent = data.entityTier || "—";
 
-          // Build signal breakdown
+          // Signal breakdown
           signalBreakdown.innerHTML = "";
           if (data.signals && data.signals.length > 0) {
             data.signals.forEach((sig) => {
+              const category = sig.key || sig.category || "Unlabeled Signal";
+              const points = sig.points || 0;
+              const max = sig.max || 10;
+              const percent = Math.round((points / max) * 100);
+              const notes = sig.notes ? `<span class="text-xs text-gray-500">${sig.notes}</span>` : "";
+
               const div = document.createElement("div");
               div.innerHTML = `
                 <div class="flex justify-between items-center">
-                  <span class="font-medium">${sig.category}</span>
-                  <span>${sig.points} / ${sig.max}</span>
+                  <span class="font-medium">${category}</span>
+                  <span>${points} / ${max}</span>
                 </div>
                 <div class="w-full h-2 bg-gray-200 rounded-full mt-1 mb-2 overflow-hidden">
-                  <div style="width:${(sig.points / sig.max) * 100}%;"
+                  <div style="width:${percent}%;"
                        class="h-2 bg-gradient-to-r from-red-500 via-yellow-400 to-green-500 rounded-full"></div>
                 </div>
+                ${notes}
               `;
               signalBreakdown.appendChild(div);
             });
