--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,18 @@
       <div class="relative w-full h-3 bg-gray-200 rounded-full overflow-hidden">
         <div id="scoreBar" class="score-bar w-0"></div>
       </div>
-      <div
-        id="entityTier"
-        class="mt-2 text-sm font-medium text-gray-700"
-      ></div>
+
+      <!-- 🌕 Evolutionary Stage Layer -->
+      <div id="entitySummary" class="mt-3 text-center">
+        <div
+          id="entityStage"
+          class="text-lg font-semibold text-gray-900"
+        ></div>
+        <div
+          id="entityVerb"
+          class="text-sm text-gray-700 mt-1"
+        ></div>
+      </div>
     </div>
 
     <!-- Input Form -->
@@ -104,7 +112,8 @@
       const resultEl = document.getElementById("result");
       const scoreBar = document.getElementById("scoreBar");
       const scoreDisplay = document.getElementById("scoreDisplay");
-      const entityTier = document.getElementById("entityTier");
+      const entityStage = document.getElementById("entityStage");
+      const entityVerb = document.getElementById("entityVerb");
       const signalBreakdown = document.getElementById("signalBreakdown");
 
       runButton.addEventListener("click", async () => {
@@ -121,7 +130,12 @@
           const score = data.entityScore || 0;
           scoreDisplay.textContent = `EEI: ${score} / 100`;
           scoreBar.style.width = `${score}%`;
-          entityTier.textContent = data.entityTier || "—";
+
+          // 🌕 Update evolutionary entity info
+          entityStage.textContent = data.entityStage || "";
+          entityVerb.textContent = data.entityVerb
+            ? `${data.entityVerb} — ${data.entityDescription}`
+            : "";
 
           // Signal breakdown
           signalBreakdown.innerHTML = "";
@@ -131,7 +145,9 @@
               const points = sig.points || 0;
               const max = sig.max || 10;
               const percent = Math.round((points / max) * 100);
-              const notes = sig.notes ? `<span class="text-xs text-gray-500">${sig.notes}</span>` : "";
+              const notes = sig.notes
+                ? `<span class="text-xs text-gray-500">${sig.notes}</span>`
+                : "";
 
               const div = document.createElement("div");
               div.innerHTML = `
